JS + jQuery => Pure JS

--- a/index.html
+++ b/index.html
@@ -69,7 +69,6 @@
 		</div>
 	</div>
 	<div class="dev">Made by <a href="https://github.com/Blackwh1te" target="_blank">Aleksander Lamkov</a></div>
-	<script src="js/jquery-3.6.0.min.js"></script>
-	<script src="js/script.js"></script>
+	<script src="js/script-pure-js.js"></script>
 </body>
 </html>
